# AllocatorTestTask

./: CMakeLists.txt
allocator/: Allocator.hpp  CMakeLists.txt
tests/: AllocatorTest.cpp
